# PPMViewer

./: .gitignore  CMakeLists.txt  README.md  index_buffer.c  index_buffer.h  main.c  open_gl.h  ppm_loader.c  shader.c  shader.h  texture.h  vertex_array.c  vertex_array.h  vertex_buffer.h  window.c  window.h
Assets/Images/: 8x8default.ppm  texture.ppm
Assets/Shaders/: default.frag  default.vert
PPMViewer/: CMakeLists.txt  open_gl.h  ppm_loader.h  shader.c  shader.h  texture.c  texture.h  vertex_buffer.c  window.c  window.h
