cmake_minimum_required(VERSION 3.10)
project(PPMViewer)

set(CMAKE_C_STANDARD 99)

if(APPLE)
    find_package(glfw3 REQUIRED)
    include_directories(/usr/local/include)
    link_libraries("-framework OpenGL" glfw)
elseif(UNIX)
    set(OpenGL_GL_PREFERENCE GLVND)
    find_package(GLEW REQUIRED)
    find_package(OpenGL REQUIRED)
    find_package(glfw3 REQUIRED)
    link_libraries(OpenGL glfw GLEW)
elseif(WIN32)
    find_package(OpenGL REQUIRED)
    find_package(GLEW REQUIRED)
    include_directories($(GLEW_INCLUDE_DIRS))
    link_libraries(opengl32 glfw3 glew32)
endif()

add_executable(PPMViewer main.c window.c shader.c texture.c ppm_loader.c vertex_array.c vertex_buffer.c index_buffer.c)
